@@ -1,6 +1,7 @@
 cm4all-workshop (7.3) unstable; urgency=low
 
   * workshop: add plan option "notify_progress"
+  * workshop: add column "jobs.time_modified"
 
  --   
 
